objects/L2I_Service_Activation__e.object
<CustomObject>
    <fields>
        <fullName>AircraftId__c</fullName>
        <label>AircraftId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseIds__c</fullName>
        <label>CaseIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Service Activation</label>
    <pluralLabel>Service Activations</pluralLabel>
</CustomObject>